--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-pdf": "^5.6.0",
     "react-router": "^6.0.2",
     "react-scripts": "4.0.3",
     "victory": "^36.2.0",
