--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,14 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "date-fns-tz": "^1.1.6",
-    "immer": "^8.0.1",
+    "immer": "^9.0.12",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-pdf": "^5.6.0",
     "react-router": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "victory": "^36.2.0",
     "web-vitals": "^1.1.2"
   },
